@@ -96,12 +96,12 @@ public class XDATScreen_edit_scr_screeningAssessment extends org.nrg.xnat.turbin
         
         if (al.size()>0 || claimedIDs.size()>0){
             int count =al.size()+1;
-            String full = StringUtils.leftPad((new Integer(count)).toString(), digits, '0');
+            String full = StringUtils.leftPad((Integer.valueOf(count)).toString(), digits, '0');
             temp_id = sessionLabel+labelExtension+ full;
 
             while (al.contains(temp_id) || claimedIDs.contains(temp_id)){
                 count++;
-                full =StringUtils.leftPad((new Integer(count)).toString(), digits, '0');
+                full =StringUtils.leftPad((Integer.valueOf(count)).toString(), digits, '0');
                 temp_id = sessionLabel+labelExtension+ full;
             }
             
@@ -110,7 +110,7 @@ public class XDATScreen_edit_scr_screeningAssessment extends org.nrg.xnat.turbin
             return temp_id;
         }else{
             int count =1;
-            String full = StringUtils.leftPad((new Integer(count)).toString(), digits, '0');
+            String full = StringUtils.leftPad((Integer.valueOf(count)).toString(), digits, '0');
             temp_id = sessionLabel+labelExtension+ full;
             return temp_id;
         }
