@@ -46,7 +46,6 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.SQLException;
 import java.text.SimpleDateFormat;
 import java.util.Collections;
@@ -80,7 +79,7 @@ public class FileUtils {
     }
 
     public static File buildCachepath(final String project, final String subDir, final String destName) {
-        final Path root = Paths.get(XDAT.getSiteConfigPreferences().getCachePath(), StringUtils.defaultIfBlank(project, "Unknown"));
+        final Path root = Path.of(XDAT.getSiteConfigPreferences().getCachePath(), StringUtils.defaultIfBlank(project, "Unknown"));
         return (StringUtils.isEmpty(subDir) ? root : root.resolve(subDir)).resolve(renameWTimestamp(destName)).toFile();
     }
 
@@ -103,7 +102,7 @@ public class FileUtils {
                 }
 
                 // First try to get the tags file at the indicated location.
-                final File tags = Paths.get(location, "tags").toFile();
+                final File tags = Path.of(location, "tags").toFile();
                 // If that doesn't exist...
                 if (!tags.exists()) {
                     // Get the value from the VERSION file
@@ -138,7 +137,7 @@ public class FileUtils {
                         final File tip = new File(location + File.separator + "tip.txt");
                         if (tip.exists()) {
                             final Pair<String, String> changesetAndDate = getChangesetAndDate(tip);
-                            VERSION = String.format("%s-%s %s", tag, changesetAndDate.getKey(), new SimpleDateFormat("yyyyMMddHHmmss").format(new SimpleDateFormat("EEE MMM dd HH:mm:ss yyyy Z").parse(changesetAndDate.getValue())));
+                            VERSION = "%s-%s %s".formatted(tag, changesetAndDate.getKey(), new SimpleDateFormat("yyyyMMddHHmmss").format(new SimpleDateFormat("EEE MMM dd HH:mm:ss yyyy Z").parse(changesetAndDate.getValue())));
                         }
                     }
                 } catch (Exception e) {
@@ -153,20 +152,20 @@ public class FileUtils {
 
     @SafeVarargs
     public static <T extends String> File buildCacheSubDir(T... directories) {
-        final File subDir = Paths.get(XDAT.getSiteConfigPreferences().getCachePath(), directories).toFile();
+        final File subDir = Path.of(XDAT.getSiteConfigPreferences().getCachePath(), directories).toFile();
         log.debug("Found cache sub-directory: {}", subDir.getAbsolutePath());
         return subDir;
     }
 
     private static String getSimpleVersion() throws IOException {
-        final File version = Paths.get(XFT.GetConfDir(), "VERSION").toFile();
+        final File version = Path.of(XFT.GetConfDir(), "VERSION").toFile();
         if (!version.exists()) {
             log.error("Can't find the VERSION file at the indicated location: {}", XFT.GetConfDir());
             return "Unknown";
         }
         // It's pretty simple, just read it and spit it back out.
         final List<String> lines = IOUtils.readLines(new BufferedReader(new FileReader(version)));
-        return lines.isEmpty() ? "" : lines.get(0);
+        return lines.isEmpty() ? "" : lines.getFirst();
     }
 
     private static Pair<String, String> getChangesetAndDate(final File file) {
@@ -200,11 +199,11 @@ public class FileUtils {
     }
 
     private static Path getExperimentFullPath(final String projectId, final String experimentLabel) {
-        return Paths.get(XDAT.getSiteConfigPreferences().getArchivePath(), projectId, getCurrentArc(projectId), experimentLabel);
+        return Path.of(XDAT.getSiteConfigPreferences().getArchivePath(), projectId, getCurrentArc(projectId), experimentLabel);
     }
 
     private static Path getSubjectFullPath(final String projectId, final String subjectLabel) {
-        return Paths.get(XDAT.getSiteConfigPreferences().getArchivePath(), projectId, "subjects", subjectLabel);
+        return Path.of(XDAT.getSiteConfigPreferences().getArchivePath(), projectId, "subjects", subjectLabel);
     }
 
     private static Map<String, List<String>> convertXFTTableForProjectSharedPathsElements(XFTTable elementsTable) {
@@ -233,7 +232,7 @@ public class FileUtils {
         Map<String, List<String>> allExperimentsForProject = convertXFTTableForProjectSharedPathsElements(experimentsTable);
         Map<String, String> subjectLabelChanges = getAllChangedElementLabels(subjectsTable);
         BiMap<String, String> experimentNewLabelToOriginal = HashBiMap.create(getAllChangedElementLabels(experimentsTable));
-        Path archivePath = Paths.get(XDAT.getSiteConfigPreferences().getArchivePath());
+        Path archivePath = Path.of(XDAT.getSiteConfigPreferences().getArchivePath());
         int totalSessions = 0;
         for (Map.Entry<String, List<String>> entry : allExperimentsForProject.entrySet()) {
             String origProject = entry.getKey();
@@ -280,16 +279,16 @@ public class FileUtils {
                         //which is found within the else if statement below.
                         String sessionNameWithinAssessorPath = newPath.getName(1).toString();
                         if (experimentNewLabelToOriginal.containsKey(experiment)) {
-                            newPath = Paths.get(newPath.toString().replaceFirst(Objects.requireNonNull(experimentNewLabelToOriginal.get(experiment)), experiment));
+                            newPath = Path.of(newPath.toString().replaceFirst(Objects.requireNonNull(experimentNewLabelToOriginal.get(experiment)), experiment));
                         }
                         if (isAssessor && experimentNewLabelToOriginal.inverse().containsKey(sessionNameWithinAssessorPath)) {
                             String replacementAssessorPath = experimentNewLabelToOriginal.inverse().get(sessionNameWithinAssessorPath);
-                            newPath = Paths.get(newPath.toString().replaceFirst(sessionNameWithinAssessorPath, replacementAssessorPath));
+                            newPath = Path.of(newPath.toString().replaceFirst(sessionNameWithinAssessorPath, replacementAssessorPath));
                         }
                         if (removeArcs) {
                             newPath = newPath.getName(0).relativize(newPath);
                             if(addExperimentLabel) {
-                                newPath = Paths.get("experiments").resolve(newPath);
+                                newPath = Path.of("experiments").resolve(newPath);
                             }
                         }
                         allPathsMap.put(path, newPath);
@@ -321,7 +320,7 @@ public class FileUtils {
                         for (Path path : collectedSubjectFiles) {
                             Path newPath = pathTranslationPath.relativize(path);
                             if (subjectLabelChanges.containsKey(subject)) {
-                                newPath = Paths.get(newPath.toString().replaceFirst(subjectLabelChanges.get(subject), subject));
+                                newPath = Path.of(newPath.toString().replaceFirst(subjectLabelChanges.get(subject), subject));
                             }
                             allPathsMap.put(path, newPath);
                         }
@@ -333,7 +332,7 @@ public class FileUtils {
         }
 
         if (includeProjectResources) {
-            Path resourcesPath = Paths.get(projectData.getArchiveRootPath(), "resources");
+            Path resourcesPath = Path.of(projectData.getArchiveRootPath(), "resources");
             try (Stream<Path> walk = Files.walk(resourcesPath)) {
                 List<Path> collectedResourceFiles = walk.filter(Files::isRegularFile).collect(Collectors.toList());
                 for (Path resourcePath : collectedResourceFiles) {
@@ -349,7 +348,7 @@ public class FileUtils {
     }
 
     public static Path createDirectoryForSharedData(Map<Path, Path> pathsMap, final Path inputLinksDirectory) throws IOException {
-        Path destinationBaseDirectory = Paths.get(XDAT.getSiteConfigPreferences().getArchivePath()).resolve(SHARED_PROJECT_DIRECTORY_STRING).resolve(inputLinksDirectory);
+        Path destinationBaseDirectory = Path.of(XDAT.getSiteConfigPreferences().getArchivePath()).resolve(SHARED_PROJECT_DIRECTORY_STRING).resolve(inputLinksDirectory);
         for (Map.Entry<Path, Path> pathConversion : pathsMap.entrySet()) {
             Path destinationPathForCurrentFile = destinationBaseDirectory.resolve(pathConversion.getValue());
             if (Files.exists(destinationPathForCurrentFile)) {
@@ -367,7 +366,7 @@ public class FileUtils {
     }
 
     public static void removeCombinedFolder(final Path baseLinksDirectory) throws IOException {
-        Path baseArchiveDirectory = Paths.get(XDAT.getSiteConfigPreferences().getArchivePath());
+        Path baseArchiveDirectory = Path.of(XDAT.getSiteConfigPreferences().getArchivePath());
         Path directoryToRemove = baseArchiveDirectory.resolve(SHARED_PROJECT_DIRECTORY_STRING).resolve(baseLinksDirectory);
         org.apache.commons.io.FileUtils.deleteDirectory(new File(directoryToRemove.toUri()));
     }
